--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "WhoAmI Server is the backend responsible for the online service",
   "main": "index.js",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "set NODE_ENV=development&& node index.js",
@@ -34,6 +33,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "mongoose": "^6.7.5"
+    "mongoose": "^6.7.5",
+    "nodemailer": "^6.8.0"
   }
 }
